--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,7 @@
         src="https://code.jquery.com/jquery-3.2.1.js"
         integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
         crossorigin="anonymous"></script>
+        
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>  
         <link rel="stylesheet" href="/css/style.css" type="text/css">
         <link rel="shortcut icon" href="/public/images/pico-white-BL.png">
@@ -33,8 +34,13 @@
 <body>
     {{{ body }}}
 
-    <script src="../frontend/site.js"></script>
+    
 </body>
 
 <footer>made with <i class="fas fa-hand-holding-heart"></i> by: Brian Loveless</footer>
+
+
+
+<script src="../public/JavaScript/site.js"></script>
+
 </html>
