site .js file correctly linked thanks Prof Ali

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://kit.fontawesome.com/70784aaaa8.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/70784aaaa8.js" crossorigin="anonymous" ></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
             <script
         src="https://code.jquery.com/jquery-3.2.1.js"
@@ -41,6 +41,6 @@
 
 
 
-<script src="../public/JavaScript/site.js"></script>
+<script src="/JavaScript/site.js"></script>
 
 </html>
