--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,9 @@
 <div class="cheers">
+
+<ul class='list-view'>
+    {{#each cheers}}
+    <li><i class="far fa-smile-beam-xs"></i>{{this.title}}{{this.cheerup}}{{this.creator}}</li>
+    {{/each}}
+</ul>
+
     </div>
