main page styled enough footer at top oh well

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,13 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://kit.fontawesome.com/70784aaaa8.js" crossorigin="anonymous" ></script>
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-            <script
-        src="https://code.jquery.com/jquery-3.2.1.js"
-        integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-        crossorigin="anonymous"></script>
-        
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>  
         <link rel="stylesheet" href="/css/style.css" type="text/css">
         <link rel="shortcut icon" href="/public/images/pico-white-BL.png">
     <title>Cheer 😊 Ups </title>
@@ -27,19 +20,19 @@
           <a href="/users/newAccount"> New Account </a>
            <a href="/cheerups/new"> Add a Cheer Up </a>
             <a href="/users"> User list </a>
+    </div>
+    <div class="second">
+        made with <i class="fas fa-hand-holding-heart"></i><a href="https://www.brianloveless.com" target="_blank"> by: Brian Loveless </a>
 
     </div>
+
 </section>
 
 <body>
+
     {{{ body }}}
 
-    
 </body>
-
-<footer>made with <i class="fas fa-hand-holding-heart"></i> by: Brian Loveless</footer>
-
-
 
 <script src="/JavaScript/site.js"></script>
 
