--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,9 @@
 
 body{
     background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    padding: 0 2%;
 }
 
 h1{
@@ -10,13 +13,98 @@ h1{
     text-align: center;
 }
 
+.top {
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    padding: 5px;
+    border: 5px solid salmon;
+    border-radius: 10px;
+
+}
+
+.top a{
+    -webkit-flex: 1 auto;
+    flex: 1 auto;
+    text-decoration: none;
+    background-color: blue;
+    color: white;
+    font-size: 30px;
+    justify-content: space-between;
+
+}
+
+.top a:hover{
+    -webkit-flex: 1 auto;
+    flex: 1 auto;
+    text-decoration: none;
+    background-color: rgb(85, 85, 243);
+    color: white;
+    font-size: 32px;
+    justify-content: space-between;
+
+}
+
+.second{
+
+    position: relative;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    background-color: green;
+    margin: 2% 0;
+    font-size: 25px;
+    text-align: center;
+    align-self: center;
+    border: 3px yellowgreen solid;
+    border-radius: 10px;
+    padding: 10px;
+    
+}
+
+.second:hover {
+
+    font-size: 28px;
+    background-color: yellowgreen;
+    border: 5px black solid;
+    border-radius: 13px;
+    padding: 12px;
+    
+
+}
+
+
+.second a {
+
+    
+    text-decoration: none;
+    background-color: antiquewhite;
+    color: crimson;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 5px;
+
+}
 
 
 
-.cheers {
+
+
+.cheersmain {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
+}
+
+
+.cheers {
+    background-color: rgb(204, 243, 10);
+    width: 100%;
+    height: 300px;
+    cursor: pointer;
 }
 
 
@@ -26,3 +114,10 @@ h1{
     height: 300px;
     cursor: pointer;
 }
+
+
+
+
+
+
+
