--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,10 @@
-<div class="cheers">
+<div class="cheersmain">
 
-<ul class='list-view'>
+<div class='cheers'>
     {{#each cheers}}
-    <li><i class="far fa-smile-beam-xs"></i>{{this.title}}{{this.cheerup}}{{this.creator}}</li>
+    <i class="far fa-smile-beam-xs"></i><h2></h2>{{this.title}}</h2>
+    <div class='cheerup'>{{this.cheerup}}</div><h3>{{this.creator}}</h3>
     {{/each}}
-</ul>
+</div>
 
     </div>
