--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,16 +9,16 @@
         <link rel="shortcut icon" href="/public/images/pico-white-BL.png">
     <title>Cheer 😊 Ups </title>
 </head>
-
+<section class="head">
 <header>
     <h1> It's ok. Don't be sad. 😞 Read a CheerUp and be Glad ! 🤗    </h1>
 </header>
 <section class="nav">
     <div class ="top">
-        <a href="/"> HOME </a>
-         <a href="/users/login"> Log In </a>
-          <a href="/users/newAccount"> New Account </a>
-           <a href="/cheerups/new"> Add a Cheer Up </a>
+        <a href="/cheerUps"> HOME </a>
+         <a href="/cheerUps/login"> Log In </a>
+          <a href="/newAccount"> New Account </a>
+           <a href="/cheerUps/new"> Add a Cheer Up </a>
             <a href="/users"> User list </a>
     </div>
     <div class="second">
@@ -26,6 +26,7 @@
 
     </div>
 
+</section>
 </section>
 
 <body>
