--- a/public/css/style.css
+++ b/public/css/style.css
@@ -143,13 +143,13 @@ h2, h3, a {
 
 
 
-.newCheerForm {
+.newCheerForm, .editCheer {
 
     margin: 15px;
     padding: 20px;
     font-size: 25px;
     background-color: rgb(50, 69, 241);
-    width: 80%;
+    width: 100%;
     color: whitesmoke;
 
 }
@@ -210,6 +210,7 @@ h2, h3, a {
     margin-left: 50%;
     margin-right: 50%;
     margin-top: 3%;
+    margin-bottom: 8%;
     
 }
 
