--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,10 +16,10 @@
 <section class="nav">
     <div class ="top">
         <a href="/cheerUps"> HOME </a>
-         <a href="/cheerUps/login"> Log In </a>
-          <a href="/newAccount"> New Account </a>
+         <a href="/users/login"> Log In </a>
+          <a href="/users/newAccount"> New Account </a>
            <a href="/cheerUps/new"> Add a Cheer Up </a>
-            <a href="/users"> User list </a>
+            <a href="/users/users"> User list </a>
     </div>
     <div class="second">
         made with <i class="fas fa-hand-holding-heart"></i><a href="https://www.brianloveless.com" target="_blank"> by: Brian Loveless </a>
