--- a/views/newAccount.hbs
+++ b/views/newAccount.hbs
@@ -1,19 +1,25 @@
 <h3> Create your Cheer up Account </h3>
-<div class="space">
-    </div>
+<div class="newAct">
+   
 <form name="form1" action="/{{id}}?_method=put" method="POST">
-
+<section>
 <label for="Name">Your Name</label>
-    <input type="text" name="name" value="{{name}}">
-
+    <input type="text" name="name" value="{{name}}" maxlength="40" size="42">
+</section>
+<section>
 <label for="username">Cheer Ups User Name</label>
-    <input type="text" name="username" value="{{username}}">
-
+    <input type="text" name="username" value="{{username}}" maxlength="40" size="42">
+</section>
+<section>
 <label for "email">email to make a cheer up account</label> 
-    <input type="text" name="email" value="{{email}}">
-
-<label for "password">password for cheer up site</label> 
-    <input type="text" name="password" value="{{password}}">
-
-    <input class="button" type="submit" value="Update">
+    <input type="text" name="email" value="{{email}}" maxlength="40" size="42">
+</section>
+<section>
+<label for "password">Password for Cheer Ups</label> 
+    <input type="text" name="password" value="{{password}}" maxlength="25" size="26">
+</section>
+<section>
+    <input class="button" type="submit" value="Create Account">
+    </section>
 </form>
+ </div>
