--- a/views/showUser.hbs
+++ b/views/showUser.hbs
@@ -1,3 +1,5 @@
+<div class="showUser">
+
 
 <h2> Name : {{name}} </h2>
 
@@ -10,3 +12,5 @@
 
 
 <a id ="pop" class="button" href="/users/edit/{{id}}">Edit Your profile</a>
+
+</div>
