--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,7 +10,7 @@
     <input type="text" name="password" value="{{password}}" maxlength="25" size="26">
     </section>
     <section class="logbtn">
-    <input class="button" type="submit" value="Create">
+    <input class="button" type="submit" value="Log into CheerUps">
     </section>
     </form>
 
