--- a/views/newAccount.hbs
+++ b/views/newAccount.hbs
@@ -11,7 +11,7 @@
     <input type="text" name="username" value="{{username}}" maxlength="40" size="42">
 </section>
 <section>
-<label for "email">email to make a cheer up account</label> 
+<label for "email">Email REQUIRED to make an account</label> 
     <input type="text" name="email" value="{{email}}" maxlength="40" size="42">
 </section>
 <section>
