can read edit and delete user

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
 
         <div class='cheerup'>{{this.cheerup}}</div>
 
-        <h3> by:<a href="/users/showuser/{{id}} "> {{this.creator}}</a></h3>
+        <h3> by:<a href="/users/users"> {{this.creator}}</a></h3>
         {{/each}}
     </div>
 
