--- a/views/showUser.hbs
+++ b/views/showUser.hbs
@@ -11,6 +11,6 @@
 
 
 
-<a id ="pop" class="button" href="/users/edit/{{id}}">Edit Your profile</a>
+<a id ="pop" class="button" href="/users/edit/{{this.id}}">Edit Your profile</a>
 
 </div>
