--- a/views/users.hbs
+++ b/views/users.hbs
@@ -2,7 +2,7 @@
     {{#each peeps}}
     <li>
 
-        <a href="/users/edit/{{this.id}}">{{this.name}}
+        <a href="/users/showUser/{{this.id}}">{{this.name}}
         </a>
         {{this.username}}
         😻
@@ -11,3 +11,5 @@
     </li>
     {{/each}}
 </ul>
+
+
