--- a/views/editUser.hbs
+++ b/views/editUser.hbs
@@ -1,7 +1,7 @@
 <h3> Edit your Cheer up Account </h3>
 <div class="space">
     </div>
-<form name="form1" action="/{{id}}?_method=put" method="POST">
+<form name="form1" action="/users/{{id}}?_method=put" method="POST">
 
 <label for="Name">Your Name</label>
     <input type="text" name="name" value="{{name}}">
