--- a/views/editCheer.hbs
+++ b/views/editCheer.hbs
@@ -1,6 +1,6 @@
 <h3> Edit your Cheer up </h3>
 <div class="editCheer">
-<form name="formEC" action="/{{id}}?_method=put" method="POST">
+<form name="formEC" action="/cheerUps/{{id}}?_method=put" method="POST">
     <section class="firstNC">
     <label for="title">Cheer Up Title</label>
     <input type="text" name="title" value="{{title}}" maxlength="40" size="42">
