--- a/views/newAccount.hbs
+++ b/views/newAccount.hbs
@@ -1,7 +1,7 @@
 <h3> Create your Cheer up Account </h3>
 <div class="newAct">
    
-<form name="form1" action="/{{id}}?_method=put" method="PUT">
+<form name="form1" action="/" method="POST">
 <section>
 <label for="Name">Your Name</label>
     <input type="text" name="name" value="{{name}}" maxlength="40" size="42">
