--- a/views/users.hbs
+++ b/views/users.hbs
@@ -1,11 +1,12 @@
-<ul class='users-view'>
+<ul class='usersView'>
     {{#each peeps}}
     <li>
 
+        <i class="far fa-user"></i>
         <a href="/users/showUser/{{this.id}}">{{this.name}}
-        </a>
+        </a> _-_
         {{this.username}}
-        😻
+         😻 
         {{this.email}}
         
     </li>
