can edit cheer - background buttons commented out causing problem

--- a/views/newCheer.hbs
+++ b/views/newCheer.hbs
@@ -13,13 +13,13 @@
     <label for "creator">Creator of this Cheer Up</label> 
     <input creator="text" name="creator" value="{{creator}}" maxlength="40" size="42">
     </section>
-    <section class="fourthNC">
+    {{!-- <section class="fourthNC">
     <label for="backgroundColor"> Back Ground Color : </label>
     <div class="colorbuttons"></div>
     <input class="buttony" type="radio" name="color" value="yellow"> <div class ="buttonlbly">Yellow  </div>
     <input class="buttonp" type="radio" name="color" value="pink"> <div class="buttonlblp">Pink  </div>
     <input class="buttong" type="radio" name="color" value="green"> <div class="buttonlblg">Green </div>
-    </section>
+    </section> --}}
 
     
 
