--- a/views/editCheer.hbs
+++ b/views/editCheer.hbs
@@ -13,13 +13,13 @@
     <label for "creator">Creator of this Cheer Up</label> 
     <input type="text" name="creator" value="{{creator}}">
     </section>
-    <section class="fourthNC">
+    {{!-- <section class="fourthNC">
     <label for="backgroundColor"> Back Ground Color </label>
     <div class="colorbuttons"></div>
     <input class="buttony" type="radio" name="color" value="yellow"> <div class ="buttonlbly">Yellow  </div>
     <input class="buttonp" type="radio" name="color" value="pink"> <div class="buttonlblp">Pink  </div>
     <input class="buttong" type="radio" name="color" value="green"> <div class="buttonlblg">Green </div>
-    </section>
+    </section> --}}
 
     <input class="buttonNCS" type="submit" value="Update">
 
