--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,7 +12,7 @@
 </head>
 <section class="head">
 <header>
-    <h1> It's ok. Don't be sad. 😞 Read a CheerUp and be Glad ! 🤗    </h1>
+    <h1> It's 🆗  Don't be sad 😞 Read a CheerUp and be Glad  🤗  !  🤩 </h1>
 </header>
 <section class="nav">
     <div class ="top">
