fixed some errors - all routes good now except create user and create cheer.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
 
     <div class='cheers'>
         {{#each cheers}}
-        <h2> <i class="far fa-smile"></i> <a href="/cheerUps/edit/{{this.id}}"> {{ this.title }} </a> <i class="far fa-smile-beam"></i></i>  </h2>
+        <h2> <i class="far fa-smile"></i> <a href="/cheerUps/showCheer/{{this.id}}"> {{ this.title }} </a> <i class="far fa-smile-beam"></i></i>  </h2>
 
         <div class='cheerup'>{{this.cheerup}}</div>
 
