--- a/views/newCheer.hbs
+++ b/views/newCheer.hbs
@@ -1,6 +1,6 @@
 <h3>Add a ' Cheer Up ' to our list </h3>
 <div class="newCheerForm">
-<form  name="formNC" action="/new" method="POST">
+<form  name="formNC" action="/" method="POST">
     <section class="firstNC">
     <label for="title">Cheer Up Title</label>
     <input type="text" name="title" value="{{title}}" maxlength="40" size="42">
