--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,7 +19,7 @@
         <a href="/cheerUps"> HOME </a>
          <a href="/users/login"> Log In </a>
           <a href="/users/newAccount"> New Account </a>
-           <a href="/cheerUps/new"> Add a Cheer Up </a>
+           <a href="/cheerUps/newCheer"> Add a Cheer Up </a>
             <a href="/users/users"> User list </a>
     </div>
     <div class="second">
