--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
 <header>
     <h1> It's 🆗  Don't be sad 😞 Read a CheerUp and be Glad  🤗  !  🤩 </h1>
 </header>
-<section class="nav">
+<section >
     <div class ="top">
         <a href="/cheerUps"> HOME </a>
          <a href="/users/login"> Log In </a>
