--- a/views/newAccount.hbs
+++ b/views/newAccount.hbs
@@ -1,23 +1,18 @@
 <h3> Create your Cheer up Account </h3>
 <div class="newAct">
    
-<form name="formNwUsr" action="/users" method="POST">
-<section>
-<label for="Name">Your Name</label>
-    <input type="text" name="name" value="{{name}}" maxlength="40" size="42">
+<form name="formNwUsr" action="/signup" method="POST">
+    <section>
+<label for "email">Email used to make cheer Ups account:</label> 
+    <input class="form-control" type="text" name="email" id="email" maxlength="40" size="42">
 </section>
-<section>
-<label for="username">Cheer Ups User Name</label>
-    <input type="text" name="username" value="{{username}}" maxlength="40" size="42">
-</section>
-<section>
-<label for "email">Email REQUIRED to make an account</label> 
-    <input type="text" name="email" value="{{email}}" maxlength="40" size="42">
-</section>
-<section>
-<label for "password">Password for Cheer Ups</label> 
-    <input type="text" name="password" value="{{password}}" maxlength="25" size="26">
-</section>
+    <section >
+    <label for="email">Password for Cheer Ups: </label> 
+    <input class="form-control" type="password" name="password" id="password" maxlength="25" size="26">
+    </section>
+    <section class="logbtn">
+    <input class="button" type="submit" value="Log into CheerUps">
+    </section>
 <section>
     <input class="button" type="submit" value="Create Account">
     </section>
