setting up with passport - halfwayish

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,8 @@
+
+  {{#if message}}
+    <div class="alert alert-danger">{{message}}</div>
+  {{/if}}
+
 <h2> CheerUps Login Page</h2>
 
 <div class="login">
