--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,7 +18,7 @@
     <div class ="top">
         <a href="/cheerUps"> HOME </a>
          <a href="/users/login"> Log In </a>
-          <a href="/users/newAccount"> New Account </a>
+          <a href="/users/signup"> New Account </a>
            <a href="/cheerUps/newCheer"> Add a Cheer Up </a>
             <a href="/users/users"> User list </a>
     </div>
