--- a/views/newAccount.hbs
+++ b/views/newAccount.hbs
@@ -1,3 +1,7 @@
+  {{#if message}}
+    <div class="alert alert-danger">{{message}}</div>
+  {{/if}}
+
 <h3> Create your Cheer up Account </h3>
 <div class="newAct">
    
