save and break time

--- a/views/newAccount.hbs
+++ b/views/newAccount.hbs
@@ -5,7 +5,7 @@
 <h3> Create your Cheer up Account </h3>
 <div class="newAct">
    
-<form name="formNwUsr" action="/signup" method="POST">
+<form name="formNwUsr" action="/users" method="POST">
     <section>
 <label for "email">Email used to make cheer Ups account:</label> 
     <input class="form-control" type="text" name="email" id="email" maxlength="40" size="42">
@@ -14,9 +14,7 @@
     <label for="email">Password for Cheer Ups: </label> 
     <input class="form-control" type="password" name="password" id="password" maxlength="25" size="26">
     </section>
-    <section class="logbtn">
-    <input class="button" type="submit" value="Log into CheerUps">
-    </section>
+
 <section>
     <input class="button" type="submit" value="Create Account">
     </section>
