--- a/views/newCheer.hbs
+++ b/views/newCheer.hbs
@@ -12,7 +12,7 @@
 
     <section class="thirdNC">
     <label for "creator">Creator of this Cheer Up</label> 
-    <input creator="text" name="creator" value="{{creator}}" maxlength="40" size="42">
+    <input creator="text" name="creator" value="{{usernameField}}" maxlength="40" size="42">
     </section> 
     
     {{!-- <section class="fourthNC">
