maybe this will work

--- a/views/users.hbs
+++ b/views/users.hbs
@@ -3,11 +3,10 @@
     <li>
 
         <i class="far fa-user"></i>
-        <a href="/users/showUser/{{this.id}}">{{this.name}}
-        </a> _-_
-        {{this.username}}
-         😻 
-        {{this.email}}
+        <a href="/users/showUser/{{this.id}}">
+        {{this.usernameField}}
+        </a> _-_ 😻 
+     
         
     </li>
     {{/each}}
