--- a/views/showUser.hbs
+++ b/views/showUser.hbs
@@ -1,12 +1,12 @@
 <div class="showUser">
 
 
-<h2> Name : {{name}} </h2>
-
-<h2>User Name : {{ username }}</h2>
 
 
-<h2>Your email: {{ email }}</h2>
+
+
+
+<h2>Your email: {{ usernameField }}</h2>
 
 
 
