cheerups still working - nothing with users working

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,7 +7,7 @@
     <script Set-Cookie: promo_shown=1; SameSite=Strict src="https://kit.fontawesome.com/70784aaaa8.js" crossorigin="anonymous" ></script>
         <link rel="stylesheet" href="/css/cheerStyle.css" type="text/css">
         <link rel="stylesheet" href="/css/userStyle.css" type="text/css">
-        <link img-src {formOrigin} rel="shortcut icon" href="/public/images/pico-white-BL.png">
+        <link img-src {formOrigin} rel="shortcut icon" href="/images/pico-white-BL.png">
     <title>Cheer 😊 Ups </title>
 </head>
 <section class="head">
