comments cause not working

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -8,6 +8,9 @@
 
 <div class="login">
 
+
+   {{!-- to get my post working used plain slash here on non-passport version after action= ... but the tutorial and solution code say use /login when using passport ...  :-(  cannot test though since new account won't post and my user seed files don't populate either--}}
+
     <form name="form1" action="/login" method="POST"></form>
     <section>
 <label for "email">Email used to make cheer Ups account: </label> 
