--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,6 @@
+
+<h2> this page under construction - no account needed currently</h2>
+
 <div class="login">
 
     <form name="form1" action="/users/login" method="Get"></form>
@@ -7,7 +10,7 @@
     </section>
     <section class="logmid">
     <label for "password">Password for Cheer Ups: </label> 
-    <input type="text" name="password" value="{{password}}" maxlength="25" size="26">
+    <input type="password" name="password" value="{{password}}" maxlength="25" size="26">
     </section>
     <section class="logbtn">
     <input class="button" type="submit" value="Log into CheerUps">
