--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,6 +8,10 @@
         <div class='cheerup'>{{this.cheerup}}</div>
 
         <h3> by:<a href="/users/users"> {{usernameField}}</a></h3>
+            <form>
+             <input type="text" id="numb" value="0"/>
+             <input type="button" onclick="upVoteCheer()" value="Up Vote this Cheer Up" />
+            </form>
         {{/each}}
     </div>
 
