--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script Set-Cookie: promo_shown=1; SameSite=Strict src="https://kit.fontawesome.com/70784aaaa8.js" crossorigin="anonymous" ></script>
+    <script  src="https://kit.fontawesome.com/70784aaaa8.js" crossorigin="anonymous" ></script>
         <link rel="stylesheet" href="/css/cheerStyle.css" type="text/css">
         <link rel="stylesheet" href="/css/userStyle.css" type="text/css">
-        <link img-src {formOrigin} rel="shortcut icon" href="/images/pico-white-BL.png">
+        <link  rel="shortcut icon" href="/images/pico-white-BL.png">
     <title>Cheer 😊 Ups </title>
 </head>
 <section class="head">
@@ -38,8 +38,10 @@
 
     {{{ body }}}
 
-</body>
 
 <script src="/JavaScript/site.js"></script>
+</body>
+
+
 
 </html>
