--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,41 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script Set-Cookie: promo_shown=1; SameSite=Strict src="https://kit.fontawesome.com/70784aaaa8.js" crossorigin="anonymous" ></script>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <script  src="https://kit.fontawesome.com/70784aaaa8.js" crossorigin="anonymous" ></script>
         <link rel="stylesheet" href="/css/cheerStyle.css" type="text/css">
         <link rel="stylesheet" href="/css/userStyle.css" type="text/css">
-        <link img-src {formOrigin} rel="shortcut icon" href="/public/images/pico-white-BL.png">
-    <title>Cheer 😊 Ups </title>
-</head>
+        <link  rel="shortcut icon" href="/images/pico-white-BL.png">
+        <title>Cheer 😊 Ups </title>
+    </head>
 <section class="head">
-<header>
-    <h1> It's 🆗  Don't be sad 😞 Read a CheerUp and be Glad  🤗  !  🤩 </h1>
-</header>
-<section >
-    <div class ="top">
-        <a href="/cheerUps"> HOME </a>
-         <a href="/users/login"> Log In </a>
-          <a href="/users/newAccount"> New Account </a>
-           <a href="/cheerUps/newCheer"> Add a Cheer Up </a>
-            <a href="/users/users"> User list </a>
-    </div>
-    <div class="second">
-        made with <i class="fas fa-hand-holding-heart"></i><a href="https://www.brianloveless.com" target="_blank"> by: Brian Loveless </a>
+    <header>
+        <h1> It's 🆗  Don't be sad 😞 Read a CheerUp and be Glad  🤗  !  🤩 </h1>
+    </header>
+    <section >
+        <div class ="top">
+         <a href="/cheerUps"> HOME </a>
+             <a href="/users/login"> Log In </a>
+              <a href="/users/newAccount"> New Account </a>
+             <a href="/cheerUps/newCheer"> Add a Cheer Up </a>
+              <a href="/users/users"> User list </a>
+         </div>
+         <div class="second">
+             made with <i class="fas fa-hand-holding-heart"></i><a href="https://www.brianloveless.com" target="_blank"> by: Brian Loveless </a>
 
-    </div>
+         </div>
 
+    </section>
 </section>
-</section>
 
-<body>
+    <body>
 
-    {{{ body }}}
+     {{{ body }}}
 
-</body>
 
-<script src="/JavaScript/site.js"></script>
+     <script src="/JavaScript/site.js"></script>
+
+    </body>
 
 </html>
