--- a/views/editCheer.hbs
+++ b/views/editCheer.hbs
@@ -7,10 +7,10 @@
     </section>
     <section class="secondNC">
     <label for="cheerup">Cheer Up Quip</label>
-    <input type="text" name="cheerup" value="{{cheerup}} "maxlength="141" size="142">
+    <input type="text" name="cheerup" value="{{cheerup}}"         maxlength="141" size="142" >
     </section>
     <section class="thirdNC">
-    <label for "creator">Creator of this Cheer Up</label> 
+    <label for="creator">Creator of this Cheer Up</label> 
     <input type="text" name="creator" value="{{creator}}">
     </section>
     {{!-- <section class="fourthNC">
