--- a/views/newAccount.hbs
+++ b/views/newAccount.hbs
@@ -16,7 +16,7 @@
 </section>
 <section>
 <label for "password">Password for Cheer Ups</label> 
-    <input type="text" name="password" value="{{password}}" maxlength="25" size="26">
+    <input type="password" name="password" value="{{password}}" maxlength="25" size="26">
 </section>
 <section>
     <input class="button" type="submit" value="Create Account">
