--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
 
         <h3> by:<a href="/users/users"> {{this.creator}}</a></h3>
         <form>
-            <input type="text" id="numb" value="0"/>
+            <input type="text" class={{this.title}} value="0"/>
             <input type="button" onclick="upVoteCheer()" value="Up Vote this Cheer Up" />
         </form>
         {{/each}}
