--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,7 +10,7 @@
         <h3> by:<a href="/users/users"> {{this.creator}}</a></h3>
         <form>
             <input type="text" class={{this.title}} value="0"/>
-            <input type="button" onclick="upVoteCheer()" value="Up Vote this Cheer Up" />
+            <input type="button" class="upVoteBtn" value="Up Vote this Cheer Up" />
         </form>
         {{/each}}
     </div>
