--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,10 +8,11 @@
         <div class='cheerup'>{{this.cheerup}}</div>
 
         <h3> by:<a href="/users/users"> {{this.creator}}</a></h3>
-        <form>
+        {{!-- <form>
             <input type="text" class={{this.title}} value="0"/>
-            <input type="button" class="upVoteBtn" value="Up Vote this Cheer Up" />
-        </form>
+            <input type="button" class="upVoteBtn" value="Up Vote this Cheer Up" /> --}}
+        {{!-- </form> --}} 
+
         {{/each}}
     </div>
 
