html error fixes

--- a/views/editUser.hbs
+++ b/views/editUser.hbs
@@ -3,23 +3,33 @@
     
 <form name="form1" action="/users/{{id}}?_method=put" method="POST">
 <section>
+    <h3> 
 <label for="Name">Your Name</label>
-    <input type="text" name="name" value="{{name}}" maxlength="40" size="42">
+    <input type="text" name="name" value="{{name}}"  maxlength="40" size="42">
+    </h3>
 </section>
-<section></section>
+<section>
+    <h3> 
 <label for="username">Cheer Ups User Name</label>
-    <input type="text" name="username" value="{{username}}" maxlength="40" size="42">
-
-<section>
-<label for "email">email to make a cheer up account</label> 
-    <input type="text" name="email" value="{{email}}" maxlength="40" size="42">
+    <input type="text" name="username" value="{{username}}"       maxlength="40" size="42">
+    </h3>
 </section>
 <section>
-<label for "password">password for cheer up site</label> 
-    <input type="password" name="password" value="{{password}}" maxlength="25" size="26">
+    <h3> 
+<label for="email">email to make a cheer up account</label> 
+    <input type="text" name="email" value="{{email}}"  maxlength="40" size="42">
+    </h3>
 </section>
 <section>
+    <h3> 
+<label for="password">password for cheer up site</label> 
+    <input type="password" name="password" value="{{password}}"    maxlength="25" size="26">
+    </h3>
+</section>
+<section>
+    <h3> 
     <input class="button" type="submit" value="Update">
+    </h3>
 </section>
 </form>
 </div>
