--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,7 +10,7 @@
         <link  rel="shortcut icon" href="/images/pico-white-BL.png">
         <title>Cheer 😊 Ups </title>
     </head>
-<section class="head">
+<div class="head">
     <header>
         <h1> It's 🆗  Don't be sad 😞 Read a CheerUp and be Glad  🤗  !  🤩 </h1>
     </header>
@@ -28,7 +28,7 @@
          </div>
 
     </section>
-</section>
+</div>
 
     <body>
 
