--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,17 +3,23 @@
 
 <div class="login">
 
-    <form name="form1" action="/users/login" method="Get"></form>
+    <form name="form1" action="/users/login" method="Get">
     <section class="logtop"> 
+        <h3>
     <label for="username">Cheer Ups User Name:</label>
     <input type="text" name="username" value="{{username}}" maxlength="40" size="42">
+    </h3>
     </section>
     <section class="logmid">
-    <label for "password">Password for Cheer Ups: </label> 
+        <h3> 
+    <label for= "password">Password for Cheer Ups: </label> 
     <input type="password" name="password" value="{{password}}" maxlength="25" size="26">
+    </h3>
     </section>
     <section class="logbtn">
+          <h3> 
     <input class="button" type="submit" value="Log into CheerUps">
+     </h3>
     </section>
     </form>
 
