--- a/views/newAccount.hbs
+++ b/views/newAccount.hbs
@@ -6,6 +6,7 @@
     <h3> 
 <label for="Name">Your Name</label>
     <input type="text" name="name" value="{{name}}"  maxlength="40" size="42">
+     </h3>
 </section>
 <section>
     <h3> 
@@ -15,13 +16,13 @@
 </section>
 <section>
     <h3> 
-<label for "email">Email REQUIRED to make an account</label> 
+<label for="email">Email REQUIRED to make an account</label> 
     <input type="text" name="email" value="{{email}}"       maxlength="40" size="42">
     </h3>
 </section>
 <section>
     <h3> 
-<label for "password">Password for Cheer Ups</label> 
+<label for="password">Password for Cheer Ups</label> 
     <input type="password" name="password" value="{{password}}" maxlength="25" size="26">
      </h3>
 </section>
